--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,16 @@ anyhow = "1.0.58"
 thiserror = "1.0.31"
 async-trait = "0.1.56"
 ethereum-jsonrpc = { git = "https://github.com/rust-ethereum/jsonrpc" }
+libmdbx = "0.1.6"
 
 [patch.crates-io]
 arrayvec = { git = "https://github.com/vorot93/arrayvec", branch = "pop-unchecked" }
 enr = { git = "https://github.com/rust-ethereum/enr" }
 ethnum = { git = "https://github.com/vorot93/ethnum-rs", branch = "impls" }
+
+[dev-dependencies]
+tokio = { verison = "1.19.2", features = ["macros"] }
+ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
+serde = "1.0.139"
+serde_json = "1.0.82"
+
